--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
   },
   "dependencies": {
     "@netlify/next": "^1.3.0",
+    "@netlify/plugin-nextjs": "^4.17.1-api-routes.0",
     "next": "12.2.5",
     "react": "18.2.0",
     "react-dom": "18.2.0"
